--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,12 @@
 		<!-- SECTION HEADER -->
 		//= partials/header.html
 		<!-- END SECTION HEADER -->
+		<!-- INTRO SECTION -->
 		//= partials/intro.html
+		<!-- END INTRO SECTION -->
+		<!-- MISSION SECTION -->
+		//= partials/mission.html
+		<!-- END MISSION SECTION -->
 	</div>	
 	<script src="js/main.js"></script>
 </body>
